# swjtu-score-monitor

./: .gitignore  README.md  build.sh  function_app.py  main.py  pyproject.toml  query_scores.py  requirements.txt
.github/workflows/: check.yml  main.yml  monitor.yml  schedule_task.yml  test_connectivity.yml
api/: index.py
ocr/: ocr.py
scraper/: fetcher.py
utils/: database.py  fetcher.py  ocr.py
