[project]
name = "swjtu-score-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    #"azure-functions>=1.24.0",
    "bs4==0.0.2",
    "pillow==10.1.0",
    "fastapi==0.99.1",
    "requests==2.32.5",
    "upstash-redis>=1.5.0",
]
# --- 新增或修改以下部分 ---
[tool.setuptools]
# 明确告诉 setuptools 包含哪些包
packages = ["api", "ocr", "scraper"]
